--- a/frontend/src/styles/NavBar.css
+++ b/frontend/src/styles/NavBar.css
@@ -1,10 +1,15 @@
 .navBar {
     margin: 0;
-    padding: 0;
+    padding: 40px;
     overflow: hidden;
     background-color: #666;
   }
 
 .titulo{
-    background-color: red;
-  }
+  font-size: 80px;
+  margin: 0;
+  color: white;
+}
+.sub-titulo{
+  color: white;
+}
