--- a/frontend/src/styles/Notice.css
+++ b/frontend/src/styles/Notice.css
@@ -1,15 +1,19 @@
-.notice {
-  overflow: hidden;
-  background-color: red;
-  border: 1px;
-  border-color: #ccc;
-  }
-  .button{
-    display: block;
-    float:right;
-  }
-  .date{
-    
-  }
+.notice, .date {
+  color: #333;
+  font-size: 13px;
+}
 
-  
+.svg {
+  display: block;
+  float: right;
+}
+
+td {
+  padding-top: 26px;
+  padding-bottom: 26px;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+.author{
+  color:#999;
+}
